--- a/app/src/main/res/layout/activity_sectors_sound_settings.xml
+++ b/app/src/main/res/layout/activity_sectors_sound_settings.xml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="16dp"
+    android:id="@+id/soundListLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/sectorLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Оберіть звук для сектору"
-        android:textSize="18sp"/>
-
-    <ListView
-        android:id="@+id/soundListView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <Button
-        android:id="@+id/backToSectors"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Назад" />
+        android:text="Back"
+        android:layout_marginTop="12dp" />
+
 </LinearLayout>
