--- a/app/src/main/res/layout/activity_sectors_sound_settings.xml
+++ b/app/src/main/res/layout/activity_sectors_sound_settings.xml
@@ -8,9 +8,10 @@
 
     <Button
         android:id="@+id/backButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Back"
-        android:layout_marginTop="12dp" />
+        android:text="Назад"
+        android:textSize="24sp"
+        android:layout_marginTop="12dp"/>
 
 </LinearLayout>
