--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
         android:layout_marginTop="12dp" />
 
     <Button
-        android:id="@+id/History"
+        android:id="@+id/btnHistory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Історія подорожей"
