--- a/app/src/main/res/layout/activity_app_settings.xml
+++ b/app/src/main/res/layout/activity_app_settings.xml
@@ -53,7 +53,7 @@
             android:id="@+id/themeSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enable Dark Theme" />
+            android:text="Темна тема" />
 
         <!-- Back Button -->
         <Button
