--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -15,6 +15,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <Button
+            android:id="@+id/btnBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Назад"
+            android:layout_margin="8dp"
+            android:layout_gravity="start|top"
+            />
+
+
         <com.example.diplomaappmodeltflite.OverlayView
             android:id="@+id/overlayView"
             android:layout_width="match_parent"
