--- a/app/src/main/res/layout/activity_objects_settings.xml
+++ b/app/src/main/res/layout/activity_objects_settings.xml
@@ -1,20 +1,27 @@
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
+    <!-- Wrap everything in one container -->
     <LinearLayout
-        android:id="@+id/objectButtonsLayout"
-        android:orientation="vertical"
-        android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/objectsButtonsContainer"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/backButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Back"
-            android:textSize="20sp"
-            android:layout_marginBottom="16dp" />
+            android:text="Назад"
+            android:textSize="24sp"
+            android:layout_marginTop="12dp"/>
     </LinearLayout>
 </ScrollView>
