--- a/app/src/main/res/layout/activity_objects_sounds_settings.xml
+++ b/app/src/main/res/layout/activity_objects_sounds_settings.xml
@@ -9,7 +9,7 @@
         android:id="@+id/backButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Back"
-        android:textSize="20sp"
+        android:text="Назад"
+        android:textSize="24sp"
         android:layout_marginTop="8dp" />
 </LinearLayout>
