added travel ui and places autocompl

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="12dp" />
 
     <Button
-        android:id="@+id/objectTrip"
+        android:id="@+id/btnTrip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Подорожі"
