--- a/app/src/main/res/layout/activity_travel.xml
+++ b/app/src/main/res/layout/activity_travel.xml
@@ -22,7 +22,7 @@
         android:id="@+id/currentLocationLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Location:"
+        android:text="Ваше місце знаходження:"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -30,16 +30,15 @@
         android:id="@+id/currentLocationTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Fetching current location..."
-        android:textSize="16sp"
-        android:paddingBottom="16dp" />
+        android:hint="Отримання поточного місцезнаходження..."
+        android:textSize="16sp" />
 
     <!-- Destination Input with Autocomplete -->
     <TextView
         android:id="@+id/destinationLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter Destination:"
+        android:text="Введіть місце призначення:"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -57,6 +56,22 @@
         android:text="Start Travel"
         android:layout_marginTop="24dp"
         android:textAllCaps="false"
+        android:layout_marginBottom="16dp"
         android:textSize="18sp" />
+
+    <FrameLayout
+        android:id="@+id/mapContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground">
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </FrameLayout>
 
 </LinearLayout>
