--- a/app/src/main/res/layout/activity_travel.xml
+++ b/app/src/main/res/layout/activity_travel.xml
@@ -53,7 +53,7 @@
         android:id="@+id/startTravelButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Start Travel"
+        android:text="Почати подорож"
         android:layout_marginTop="24dp"
         android:textAllCaps="false"
         android:layout_marginBottom="16dp"
