--- a/app/src/main/res/layout/activity_map_only.xml
+++ b/app/src/main/res/layout/activity_map_only.xml
@@ -6,7 +6,7 @@
     <!-- Google Map -->
     <fragment
         android:id="@+id/fullMap"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:name="com.google.android.libraries.navigation.SupportNavigationFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
