--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,14 @@
     <Button
         android:id="@+id/btnStartDetection"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:text="Почати виявлення"
         android:textSize="24sp"/>
 
     <Button
-        android:id="@+id/btnSettings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Налаштування інтерфейсу"
-        android:textSize="24sp"
-        android:layout_marginTop="12dp" />
-
-    <Button
         android:id="@+id/sectorsSettingsButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:text="Налаштування секторів"
         android:textSize="24sp"
         android:layout_marginTop="12dp" />
@@ -32,7 +24,7 @@
     <Button
         android:id="@+id/objectSoundSettings"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:text="Налаштування звуків об'єктів"
         android:textSize="24sp"
         android:layout_marginTop="12dp" />
@@ -40,7 +32,7 @@
     <Button
         android:id="@+id/objectDistanceSettings"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:text="Налаштування відстані"
         android:textSize="24sp"
         android:layout_marginTop="12dp" />
@@ -48,7 +40,7 @@
     <Button
         android:id="@+id/btnTrip"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:text="Подорожі"
         android:textSize="24sp"
         android:layout_marginTop="12dp" />
@@ -56,8 +48,16 @@
     <Button
         android:id="@+id/btnHistory"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:text="Історія подорожей"
+        android:textSize="24sp"
+        android:layout_marginTop="12dp" />
+
+    <Button
+        android:id="@+id/btnSettings"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:text="Налаштування інтерфейсу"
         android:textSize="24sp"
         android:layout_marginTop="12dp" />
 
