--- a/app/src/main/res/layout/activity_map_only.xml
+++ b/app/src/main/res/layout/activity_map_only.xml
@@ -18,4 +18,12 @@
         android:text="Назад"
         android:layout_gravity="top|start"
         android:layout_margin="12dp" />
+
+    <Button
+        android:id="@+id/btnStopNavigation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Зупинити"
+        android:layout_gravity="top|end"
+        android:layout_margin="12dp" />
 </FrameLayout>
