--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
     android:padding="16dp">
-
-    <Button
-        android:id="@+id/btnStartDetection"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="Почати виявлення"
-        android:textSize="24sp"/>
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="5dp">
 
-    <Button
-        android:id="@+id/sectorsSettingsButton"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="Налаштування секторів"
-        android:textSize="24sp"
-        android:layout_marginTop="12dp" />
+        <Button
+            android:id="@+id/btnStartDetection"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Почати виявлення"
+            android:textSize="24sp"/>
 
-    <Button
-        android:id="@+id/objectSoundSettings"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="Налаштування звуків об'єктів"
-        android:textSize="24sp"
-        android:layout_marginTop="12dp" />
+        <Button
+            android:id="@+id/sectorsSettingsButton"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Налаштування секторів"
+            android:textSize="24sp"
+            android:layout_marginTop="12dp" />
 
-    <Button
-        android:id="@+id/objectDistanceSettings"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="Налаштування відстані"
-        android:textSize="24sp"
-        android:layout_marginTop="12dp" />
+        <Button
+            android:id="@+id/objectSoundSettings"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Налаштування звуків об'єктів"
+            android:textSize="24sp"
+            android:layout_marginTop="12dp" />
 
-    <Button
-        android:id="@+id/frequencySettings"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="Налаштування частоти"
-        android:textSize="24sp"
-        android:layout_marginTop="12dp" />
+        <Button
+            android:id="@+id/objectDistanceSettings"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Налаштування відстані"
+            android:textSize="24sp"
+            android:layout_marginTop="12dp" />
 
-    <Button
-        android:id="@+id/btnTrip"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="Подорожі"
-        android:textSize="24sp"
-        android:layout_marginTop="12dp" />
+        <Button
+            android:id="@+id/frequencySettings"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Налаштування частоти"
+            android:textSize="24sp"
+            android:layout_marginTop="12dp" />
 
-    <Button
-        android:id="@+id/btnHistory"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="Історія подорожей"
-        android:textSize="24sp"
-        android:layout_marginTop="12dp" />
+        <Button
+            android:id="@+id/btnTrip"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Подорожі"
+            android:textSize="24sp"
+            android:layout_marginTop="12dp" />
 
-    <Button
-        android:id="@+id/btnSettings"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="Налаштування інтерфейсу"
-        android:textSize="24sp"
-        android:layout_marginTop="12dp" />
+        <Button
+            android:id="@+id/btnHistory"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Історія подорожей"
+            android:textSize="24sp"
+            android:layout_marginTop="12dp" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/btnSettings"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Налаштування інтерфейсу"
+            android:textSize="24sp"
+            android:layout_marginTop="12dp" />
+
+    </LinearLayout>
+</ScrollView>
