--- a/app/src/main/res/layout/activity_sectors_sound_settings.xml
+++ b/app/src/main/res/layout/activity_sectors_sound_settings.xml
@@ -6,6 +6,23 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <TextView
+        android:id="@+id/selectedSoundLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Обраний звук: "
+        android:textSize="18sp"
+        android:layout_marginBottom="16dp"/>
+
+    <Button
+        android:id="@+id/selectFromPhoneButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Обрати з памʼяті телефону"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"/>
+
+
     <Button
         android:id="@+id/backButton"
         android:layout_width="match_parent"
