--- a/app/src/main/res/layout/activity_frequency.xml
+++ b/app/src/main/res/layout/activity_frequency.xml
@@ -71,6 +71,14 @@
             android:textSize="24sp"
             android:layout_marginBottom="24dp" />
 
+        <EditText
+            android:id="@+id/editCompassUpdateTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Частота ооновлення показників компасу (ms)"
+            android:inputType="number"
+            />
+
         <!-- Save Button -->
         <Button
             android:id="@+id/buttonSaveFrequency"
