--- a/app/src/main/res/layout/activity_app_settings.xml
+++ b/app/src/main/res/layout/activity_app_settings.xml
@@ -53,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Гучність: 100%"
+            android:textSize="24sp"
             android:layout_marginTop="16dp" />
 
         <!-- Theme Setting -->
