--- a/app/src/main/res/layout/activity_objects_sounds_settings.xml
+++ b/app/src/main/res/layout/activity_objects_sounds_settings.xml
@@ -15,7 +15,7 @@
 
     <Button
         android:id="@+id/selectFromPhoneButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Обрати з памʼяті телефону"
         android:textSize="24sp"
